--- a/Apps/APN-UIKit/APN UIKit/APN UIKit/Base.lproj/Main.storyboard
+++ b/Apps/APN-UIKit/APN UIKit/APN UIKit/Base.lproj/Main.storyboard
@@ -664,6 +664,18 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="637-vE-UDe"/>
+                    <connections>
+                        <outlet property="apiKeyTextField" destination="Svx-V1-ygO" id="Vh6-bV-R40"/>
+                        <outlet property="bgQMinTasks" destination="M6C-ZH-JdN" id="1ax-wD-YIZ"/>
+                        <outlet property="bgQTakDelayTextField" destination="pSW-8b-6U3" id="oYw-rp-tuL"/>
+                        <outlet property="debugModeToggle" destination="KTX-LK-Tpd" id="2Bu-FU-aXC"/>
+                        <outlet property="deviceTokenTextField" destination="jPa-Ye-N0O" id="UIr-fD-2NP"/>
+                        <outlet property="enablePushToggle" destination="So7-E1-VKV" id="3WO-mF-54U"/>
+                        <outlet property="siteIdTextField" destination="k3o-ac-Zim" id="cGZ-nh-hOq"/>
+                        <outlet property="trackDeviceToggle" destination="2zH-fs-NBi" id="pWh-Lk-Nch"/>
+                        <outlet property="trackScreenToggle" destination="tgd-Y3-gsY" id="zWF-PI-uVz"/>
+                        <outlet property="trackUrlTextField" destination="s8J-c0-KKY" id="3N1-Xm-VC5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jLA-wS-p5P" sceneMemberID="firstResponder"/>
             </objects>
