--- a/Apps/APN-UIKit/APN UIKit/APN UIKit/Base.lproj/Main.storyboard
+++ b/Apps/APN-UIKit/APN UIKit/APN UIKit/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="APN_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="APN_UIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -237,10 +237,18 @@
                                     <constraint firstAttribute="width" constant="50" id="eza-2G-gKT"/>
                                 </constraints>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usericon" translatesAutoresizingMaskIntoConstraints="NO" id="tbS-YB-vPe">
+                                <rect key="frame" x="20" y="67" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="p65-fT-na9"/>
+                                    <constraint firstAttribute="height" constant="50" id="qGy-1y-8fc"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="QCK-Bh-SyG"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="tbS-YB-vPe" firstAttribute="centerY" secondItem="Kn0-pQ-K5D" secondAttribute="centerY" id="57j-ra-tQH"/>
                             <constraint firstItem="gm6-Cg-tg6" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="10" id="9XZ-N2-MTn"/>
                             <constraint firstItem="Kn0-pQ-K5D" firstAttribute="top" secondItem="QCK-Bh-SyG" secondAttribute="top" constant="20" id="Axs-iq-bOs"/>
                             <constraint firstItem="QCK-Bh-SyG" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gm6-Cg-tg6" secondAttribute="trailing" id="B9V-Qh-5ZD"/>
@@ -249,6 +257,7 @@
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="centerX" secondItem="LR0-48-7RQ" secondAttribute="centerX" id="Df6-LA-cyo"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="centerY" secondItem="LR0-48-7RQ" secondAttribute="centerY" id="FYN-MZ-pSL"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="20" id="T5c-wP-91S"/>
+                            <constraint firstItem="tbS-YB-vPe" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="20" id="r1a-xD-7l0"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="top" secondItem="gm6-Cg-tg6" secondAttribute="bottom" constant="40" id="rcs-MH-dX9"/>
                             <constraint firstItem="gm6-Cg-tg6" firstAttribute="centerX" secondItem="LR0-48-7RQ" secondAttribute="centerX" id="sj0-My-pz5"/>
                         </constraints>
@@ -256,6 +265,7 @@
                     <navigationItem key="navigationItem" id="lSD-LL-pFO"/>
                     <connections>
                         <outlet property="settings" destination="Kn0-pQ-K5D" id="0cy-hk-K6x"/>
+                        <outlet property="userDetail" destination="tbS-YB-vPe" id="Vhd-s1-uLc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7l8-Yk-uny" sceneMemberID="firstResponder"/>
@@ -598,6 +608,9 @@
                                                 <subviews>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="So7-E1-VKV">
                                                         <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
+                                                        <connections>
+                                                            <action selector="enablePushChanged:" destination="Gr3-gf-Tr0" eventType="valueChanged" id="9Pp-E2-qWa"/>
+                                                        </connections>
                                                     </switch>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tgd-Y3-gsY">
                                                         <rect key="frame" x="0.0" y="39" width="51" height="31"/>
@@ -666,7 +679,7 @@
                     <navigationItem key="navigationItem" id="637-vE-UDe"/>
                     <connections>
                         <outlet property="apiKeyTextField" destination="Svx-V1-ygO" id="Vh6-bV-R40"/>
-                        <outlet property="bgQMinTasks" destination="M6C-ZH-JdN" id="1ax-wD-YIZ"/>
+                        <outlet property="bgQMinTasksTextField" destination="M6C-ZH-JdN" id="Zf2-0O-sDm"/>
                         <outlet property="bgQTakDelayTextField" destination="pSW-8b-6U3" id="oYw-rp-tuL"/>
                         <outlet property="debugModeToggle" destination="KTX-LK-Tpd" id="2Bu-FU-aXC"/>
                         <outlet property="deviceTokenTextField" destination="jPa-Ye-N0O" id="UIr-fD-2NP"/>
@@ -681,9 +694,40 @@
             </objects>
             <point key="canvasLocation" x="3417" y="4"/>
         </scene>
+        <!--Deep Link View Controller-->
+        <scene sceneID="mGj-Jk-jcM">
+            <objects>
+                <viewController storyboardIdentifier="DeepLinkViewController" id="3ov-7B-9mY" customClass="DeepLinkViewController" customModule="APN_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="V8X-sX-Mw7">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You see this screen because you tapped on a push notification that had a deep link." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UTr-u2-NjR">
+                                <rect key="frame" x="20" y="345.66666666666669" width="350" height="153"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="28"/>
+                                <color key="textColor" red="0.24313725489999999" green="0.24313725489999999" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="KU8-fO-oeh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="UTr-u2-NjR" firstAttribute="centerY" secondItem="V8X-sX-Mw7" secondAttribute="centerY" id="8k5-a8-7xx"/>
+                            <constraint firstAttribute="trailing" secondItem="UTr-u2-NjR" secondAttribute="trailing" constant="20" id="XNj-BY-jx9"/>
+                            <constraint firstItem="UTr-u2-NjR" firstAttribute="leading" secondItem="V8X-sX-Mw7" secondAttribute="leading" constant="20" id="vIg-JD-euU"/>
+                            <constraint firstItem="UTr-u2-NjR" firstAttribute="centerX" secondItem="V8X-sX-Mw7" secondAttribute="centerX" id="vWm-cz-tiC"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="bVA-fC-7jM"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oht-yj-uze" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4202" y="4"/>
+        </scene>
     </scenes>
     <resources>
         <image name="settings" width="512" height="512"/>
+        <image name="usericon" width="128" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
